syntax = "proto3";

package proto;

/*-
 * ‌
 * Hedera Network Services Protobuf
 * ​
 * Copyright (C) 2018 - 2021 Hedera Hashgraph, LLC
 * ​
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * ‍
 */

option java_package = "com.hederahashgraph.api.proto.java";
// <<<pbj.java_package = "com.hedera.hapi.node.lambda">>> This comment is special code for setting PBJ Compiler java package
option java_multiple_files = true;

import "basic_types.proto";
import "lambda.proto";

/**
 * Specifies the creation of a new lambda at a specific id; the
 * id must not exist.
 */
message LambdaCreation {
  /**
   * The id of the lambda.
   */
  LambdaID lambda_id = 1;

  /**
   * The installation details.
   */
  LambdaInstallation installation = 2;

  /**
   * The index of the lambda the new installation should be previous
   * to in the owner's doubly-linked list of lambdas.
   */
  uint64 next_lambda_index = 3;
}

/**
 * Specifies the execution of a lambda by its owner id and
 * the details of the call (which includes the index).
 */
message LambdaExecution {
  /**
   * The id of the lambda's owner.
   */
  LambdaOwnerID owner_id = 1;

  /**
   * The call details.
   */
  LambdaCall call = 2;
}

/**
 * Dispatches a lambda action to the ContractService.
 */
message LambdaDispatchTransactionBody {
  oneof action {
    /**
     * The id of the lambda to delete.
     */
    LambdaID lambda_id_to_delete = 1;

    /**
     * The creation of a new lambda.
     */
    LambdaCreation creation = 2;

    /**
     * A call to an existing lambda.
     */
    LambdaExecution execution = 3;
  }
}
